--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-runtime": "^6.0.0",
     "better-scroll": "^0.1.15",
     "create-keyframe-animation": "^0.1.0",
+    "vuex": "^2.3.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
